--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:networkSecurityConfig="@xml/network_security_config">
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyC1vq_Wcx1fO7j-BlLP5KH48f14RLYotes"/>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="add key here"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
